--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,33 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": ".NET Core Launch (web)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/PasswordWeb/bin/Debug/netcoreapp3.0/PasswordWeb.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/PasswordWeb",
+            "stopAtEntry": false,
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "^\\s*Now listening on:\\s+(https?://\\S+)"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceFolder}/Views"
+            }
+        },
+        {
+            "type": "chrome",
+            "request": "launch",
+            "name": "Launch Chrome against localhost",
+            "url": "https://localhost:5001/",
+            "webRoot": "${workspaceFolder}"
+        },
+        {
             "name": ".NET Core Launch (console)",
             "type": "coreclr",
             "request": "launch",
@@ -14,7 +41,16 @@
             "cwd": "${workspaceFolder}/Password",
             "console": "externalTerminal",
             "stopAtEntry": false
-        },
+        },  
+        {
+            "name": ".NET Core Launch (windform)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/PasswordApp/bin/Debug/netcoreapp3.0/PasswordApp.exe",
+            "args": [],
+            "cwd": "${workspaceFolder}/PasswordApp",
+        },              
         {
             "name": ".NET Core Attach",
             "type": "coreclr",
