--- a/PasswordApp/PasswordApp.csproj
+++ b/PasswordApp/PasswordApp.csproj
@@ -9,7 +9,11 @@
   <ItemGroup>
     <PackageReference Include="System.Xml.XmlSerializer" Version="4.3.0" />
   </ItemGroup>
-
+  <ItemGroup> 
+    <Content Include="App_Data\**"> 
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
+    </Content> 
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PasswordLibrary\PasswordLibrary.csproj" />
   </ItemGroup>
