--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": ".NET Core Launch (web)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build",
-            "program": "${workspaceFolder}/PasswordWeb/bin/Debug/netcoreapp3.0/PasswordWeb.dll",
+            "preLaunchTask": "buildWeb",
+            "program": "${workspaceFolder}/PasswordWeb/bin/Debug/netcoreapp3.1/PasswordWeb.dll",
             "args": [],
             "cwd": "${workspaceFolder}/PasswordWeb",
             "stopAtEntry": false,
@@ -36,7 +36,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/Password/bin/Debug/netcoreapp3.0/Password.dll",
+            "program": "${workspaceFolder}/Password/bin/Debug/netcoreapp3.1/Password.dll",
             "args": [],
             "cwd": "${workspaceFolder}/Password",
             "console": "externalTerminal",
@@ -47,7 +47,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "buildApp",
-            "program": "${workspaceFolder}/PasswordApp/bin/Debug/netcoreapp3.0/PasswordApp.exe",
+            "program": "${workspaceFolder}/PasswordApp/bin/Debug/netcoreapp3.1/PasswordApp.exe",
             "args": [],
             "cwd": "${workspaceFolder}/PasswordApp",
         },              
