--- a/PasswordApp/PasswordApp.csproj
+++ b/PasswordApp/PasswordApp.csproj
@@ -2,17 +2,16 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="System.Xml.XmlSerializer" Version="4.3.0" />
-  </ItemGroup>
-  <ItemGroup> 
-    <Content Include="App_Data\**"> 
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
-    </Content> 
+  </ItemGroup> <ItemGroup>
+    <None Include="..\PasswordLibrary\App_Data\services.xml" CopyToOutputDirectory="Always" >
+      <link>App_Data\services.xml</link>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PasswordLibrary\PasswordLibrary.csproj" />
