--- a/Password/Password.csproj
+++ b/Password/Password.csproj
@@ -2,11 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <ApplicationIcon />
     <StartupObject />
   </PropertyGroup>
-
+ <ItemGroup>
+    <None Include="..\PasswordLibrary\App_Data\services.xml" CopyToOutputDirectory="Always" >
+      <link>App_Data\services.xml</link>
+    </None>
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PasswordLibrary\PasswordLibrary.csproj" />
   </ItemGroup>
