--- a/PasswordWeb/PasswordWeb.csproj
+++ b/PasswordWeb/PasswordWeb.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
     <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
     <IsPackable>false</IsPackable>
@@ -10,6 +10,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.4"/>
     <ProjectReference Include="..\PasswordLibrary\PasswordLibrary.csproj"/>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\PasswordLibrary\App_Data\services.xml" CopyToOutputDirectory="Always" >
+      <link>App_Data\services.xml</link>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Remove="$(SpaRoot)**"/>
